--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,8 @@
 *{
+    margin: 0px;
     font-family: 'Work Sans', sans-serif;
 }
 
-body{
-    margin: 0px;
-}
 
 /* Header styles start */
 .header{
@@ -69,6 +67,45 @@ body{
 
 
 /* Main styles start */
+
+/* Failure part starts */
+.failure{
+    width: 80%;
+    margin: 130px auto;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+    flex-basis: auto;
+    display: flex;
+}
+
+.failure-img{
+    width: 50%;
+}
+
+.failure-options{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.head-2{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #151414;
+    margin: 0px;
+}
+
+.paragraph{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #444343;
+    margin-top: 20px;
+    margin-bottom: 12;
+}
 
 
 
