--- a/styles/style.css
+++ b/styles/style.css
@@ -119,4 +119,11 @@
 }
 /* Failure and Success (EXTRA) parts ends */
 
+/* Plans section starts */
+.plans{
+    
+}
+
+/* Plans section ends */
+
 /* Main styles end */
