--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,47 @@
 
 /* Plans section starts */
 .plans{
-    
+    width: 90%;
+    margin: auto;
+    margin-bottom: 130px;
 }
+
+.plan h2{
+    text-align: center;
+}
+
+.plans-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 55px;
+}
+
+.plans-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.plans-list h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: #151414;
+    margin: 16px 0px;
+}
+
+.plans-list p{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 25px;
+    color: #737272;
+    margin: 0px;
+}
+
+
 
 /* Plans section ends */
 
