--- a/styles/style.css
+++ b/styles/style.css
@@ -161,8 +161,27 @@
     margin: 0px;
 }
 
-
-
 /* Plans section ends */
+
+/* Gradient section starts */
+.gradient{
+    width: 80%;
+    height: 300px;
+    margin: auto;
+    margin-bottom: 130px;
+    background: url(/images/gradient1.png), url(/images/watch.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+}
+
+.gradient-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 50px;
+}
+
+/* Gradient section ends */
 
 /* Main styles end */
