--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,20 @@
 }
 
 .header-div{
-    width: 80%;
+    width: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
+    
+}
+
+.header-sub-div{
+    width: 525px;
+height: 228px;
+left: 845px;
+top: 216px;
 }
 
 .header-div h1{
@@ -185,3 +193,93 @@
 /* Gradient section ends */
 
 /* Main styles end */
+
+
+/* Footer section Starts */
+.footer{
+    background: #151414;
+    width: 100%;
+    height: 500px;
+    display: flex;
+}
+
+.footer-div{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-div{
+    width: 50%;
+}
+
+.contact{
+    width: 70%;
+}
+
+.subscribe{
+    width: 30%s;
+}
+
+.social-icons{
+    display: flex;
+    gap: 20px;
+}
+
+.footer h3{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #F8F8F8;
+    margin: 16px 0px;
+}
+.footer p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin: 16px 0px;
+}
+
+.footer h4{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    margin: 15px 0px;
+    color: #FFFFFF;
+}
+.footer input{
+    width: 100%;
+    height: 64px;
+    background-color: transparent;
+    border: 1px solid #FFFFFF;
+    border-radius: 8px;
+    margin: 15px 0px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    padding-left: 10px;
+    color: white;
+}
+
+.button-2{
+    width: 160px;
+    height: 64px;
+    background: #005FAC;
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+/* Footer section Ends */
