--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 .header{
     width: 100%;
     height: 750px;
-    background-image: url(./images/banner/banner3.png);
+    background-image: url(../images/banner/banner3.png);
     background-repeat: no-repeat;
     background-size: cover;
     text-align: right;
@@ -177,7 +177,7 @@ top: 216px;
     height: 300px;
     margin: auto;
     margin-bottom: 130px;
-    background: url(./images/gradient1.png), url(./images/watch.png);
+    background: url(../images/gradient1.png), url(../images/watch.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
